Fix sonar issues. Reformat code 	modified:   src/main/java/com/github/thecoolersuptelov/msgbackend/MsgbackendApplication.java 	modified:   src/main/java/com/github/thecoolersuptelov/msgbackend/chat/Chat.java 	modified:   src/main/java/com/github/thecoolersuptelov/msgbackend/chat/ChatController.java 	modified:   src/main/java/com/github/thecoolersuptelov/msgbackend/chat/ChatCreationException.java 	modified:   src/main/java/com/github/thecoolersuptelov/msgbackend/chat/ChatRepository.java 	modified:   src/main/java/com/github/thecoolersuptelov/msgbackend/chat/ChatService.java 	modified:   src/main/java/com/github/thecoolersuptelov/msgbackend/chatMessage/Message.java 	modified:   src/main/java/com/github/thecoolersuptelov/msgbackend/chatMessage/MessageCreationException.java 	modified:   src/main/java/com/github/thecoolersuptelov/msgbackend/chatMessage/MessageDto.java 	modified:   src/main/java/com/github/thecoolersuptelov/msgbackend/chatMessage/MessageRepository.java 	modified:   src/main/java/com/github/thecoolersuptelov/msgbackend/chatMessage/MessageService.java 	modified:   src/main/java/com/github/thecoolersuptelov/msgbackend/chatUser/UserController.java 	modified:   src/main/java/com/github/thecoolersuptelov/msgbackend/chatUser/UserException.java 	modified:   src/main/java/com/github/thecoolersuptelov/msgbackend/chatUser/UserRepository.java 	modified:   src/main/java/com/github/thecoolersuptelov/msgbackend/chatUser/UserSearchStrategy.java 	modified:   src/main/java/com/github/thecoolersuptelov/msgbackend/chatUser/UserService.java 	modified:   src/test/java/com/github/thecoolersuptelov/msgbackend/ChatControllerTest.java 	modified:   src/test/java/com/github/thecoolersuptelov/msgbackend/MessageControllerTest.java 	modified:   src/test/java/com/github/thecoolersuptelov/msgbackend/UserControllerTest.java