@@ -3,13 +3,10 @@ package com.github.thecoolersuptelov.msgbackend.chatMessage;
 import com.github.thecoolersuptelov.msgbackend.chat.ChatRepository;
 import com.github.thecoolersuptelov.msgbackend.chatUser.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class MessageService {
@@ -19,9 +16,11 @@ public class MessageService {
     private UserRepository userRepository;
     @Autowired
     private MessageRepository messageRepository;
-    public boolean existUserInChat(UUID chatId, UUID userId){
-        return chatRepository.existsByUsers_IdEqualsAndIdEquals(userId,chatId);
+
+    public boolean existUserInChat(UUID chatId, UUID userId) {
+        return chatRepository.existsByUsers_IdEqualsAndIdEquals(userId, chatId);
     }
+
     public String createMessage(UUID author, UUID chat, String textMessage) throws MessageCreationException {
         if (!existUserInChat(chat, author)) {
             throw new MessageCreationException("User doesn't exist in that chat.");
@@ -35,6 +34,6 @@ public class MessageService {
     }
 
     public List<MessageDto> getAllMessagesFromChat(UUID chatId) {
-        return messageRepository.findByChat_IdEqualsOrderByCreated_atAsc(chatId).stream().map(MessageDto::new).collect(Collectors.toList());
+        return messageRepository.findByChat_IdEqualsOrderByCreated_atAsc(chatId).stream().map(MessageDto::new).toList();
     }
 }
